--- a/.github/workflows/repology_metadata.yml
+++ b/.github/workflows/repology_metadata.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   main:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
     - name: Clone repository
       uses: actions/checkout@v6
